k8s/elastic/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elastic
  namespace: feathr
spec:
  serviceName: elastic
  replicas: 1
  selector:
    matchLabels:
      app: elastic
  template:
    metadata:
      labels:
        app: elastic
    spec:
      containers:
        - name: elastic
          image: elasticsearch:8.13.0
          ports:
            - containerPort: 9200
          volumeMounts:
            - name: elasticsearch-data
              mountPath: /usr/share/elasticsearch/data
          resources:
            requests:
              memory: "512Mi"
            limits:
              memory: "1Gi"

  volumeClaimTemplates:
    - metadata:
        name: elasticsearch-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi
