k8s/elastic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elastic
  labels:
    app: elastic
  namespace: feathr
spec:
  selector:
    app: elastic 
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 9200
      targetPort: 9200
      protocol: TCP
